--- a/index.html
+++ b/index.html
@@ -25,29 +25,12 @@
                 </div>
             </nav>
         </header>
-        <main>
-       <section> 
-      <header> 
-        <h2>Cabeçalho da Section </h2> 
-    </header>
-    <div>  
-        <h3>Texto abaixo do cabeçalho da section</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempus facilisis blandit. Sed cursus consequat enim, sed venenatis augue elementum eu.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempus facilisis blandit. Sed cursus consequat enim, sed venenatis augue elementum eu.</p>
-        </div>
-      </section>
-      <aside>
-        <header>
-          <h2>Cabeçalho do Aside</h2>
-        </header>
-        <div>
-          <h3>Texto abaixo do cabeçalho do aside</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempus facilisis blandit. Sed cursus consequat enim, sed venenatis augue elementum eu.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempus facilisis blandit. Sed cursus consequat enim, sed venenatis augue elementum eu.</p>
-        </div>
-      </aside>
-    </main>
-            
+        <section class="escola">
+            <img class="imagem-escola" src="Fn6k03JWIAA92Ur-removebg-preview.png" alt="escudo do coxa">
+            <h2>Sobre a Escola</h2>
+              <p class="escola-testo-um"> batatinha quando nasce se esparralhama pelo chão</p>
+              <p class="escola-testo-dois"></p>
+        </section>
         </header>
      </div>
 
