--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
             </nav>
         </header>
         <section class="escola">
+            <div class=”escola-conteudo”>
             <img class="imagem-escola" src="Fn6k03JWIAA92Ur-removebg-preview.png" alt="escudo do coxa">
-            <h2>Sobre a Escola</h2>
-              <p class="escola-testo-um"> batatinha quando nasce se esparralhama pelo chão</p>
+            <h2>Sobre o time</h2>
+              <p class="escola-testo-um"> O Coritiba Foot Ball Club, mais conhecido como Coritiba, é um clube de futebol brasileiro da cidade de Curitiba, fundado no Teatro Hauer em 12 de outubro de 1909.</p>
               <p class="escola-testo-dois"></p>
-        </section>
+            </div>
+    </section>
         </header>
      </div>
 
